# schist

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  PLAN.md  README.md  SECURITY.md
.claude/skills/: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  dependabot-auto-merge.yml  release.yml
cli/: README.md  pyproject.toml
cli/schist/: __main__.py  acl.py  commands.py  default.yaml  doctor.py  env_utils.py  git_ops.py  hub_admin.py  index_contract.py  ingest.py  markdown_io.py  pre_receive.py  rate_limit.py  schema.sql  seed-domains.sql  spoke_config.py  sqlite_query.py  sync.py
cli/schist/acl-fixtures/: README.md  basic-write-grant.cases.json  basic-write-grant.yaml  identity-resolution.cases.json  parent-grants-child.cases.json  parent-grants-child.yaml  reject-access-not-participant.cases.json  reject-access-not-participant.yaml  reject-bad-participant-name.cases.json  reject-bad-participant-name.yaml  reject-duplicate-participant.cases.json  reject-duplicate-participant.yaml  reject-missing-participants.cases.json  reject-missing-participants.yaml  reject-participant-no-access.cases.json  reject-participant-no-access.yaml  reject-participant-no-name.cases.json  reject-participant-no-name.yaml  reject-yaml-bool-token-name.cases.json  reject-yaml-bool-token-name.yaml  unknown-identity.cases.json  unknown-identity.yaml  wildcard-write.cases.json  wildcard-write.yaml
cli/tests/: test_acl.py  test_acl_parity.py  test_commands.py  test_doctor.py  test_env_utils.py  test_frontmatter_contract.py  test_git_ops.py  test_hub.py  test_hub_admin.py  test_hub_spoke_e2e.py  test_index_contract.py  test_ingest.py  test_init_standalone.py  test_markdown_io.py  test_pre_commit_hook.py  test_pre_receive.py  test_rate_limit.py  test_schema_command.py  test_spoke_config.py  test_sqlite_query.py  test_sync.py
docs/: RELEASE.md  comparison.md  cross-project-memory.md  data-model.md  frontmatter-parser-parity.md  getting-started.md  hub-spoke-pi-hpc-mac.md  hub-spoke-pi-orcd-dragonfly.md  hub-spoke-setup.md  mcp-setup.md
docs/planning/: 2026-05-17-schist-retrieve-mcp-tool.md  2026-06-08-schema-frontmatter-roadmap.md
hooks/: post-commit  pre-commit  pre-receive
ingestion/: ingest.py  requirements.txt  schema.sql  seed-domains.sql
mcp-server/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
mcp-server/src/: agent-identity.ts  git-writer.ts  index.ts  markdown-parser.ts  note-id.ts  server-instructions.ts  sqlite-reader.ts  tool-registry.ts  tools.ts  types.ts  vault-acl.ts
mcp-server/tests/: agent-identity.test.ts  audit-script.test.ts  compose-brief-tool.test.ts  concept-slug-parity.test.ts  confidence-field.test.ts  connection-append-parity.test.ts  connection-line-parity.test.ts  file-ref-field.test.ts  frontmatter-contract.test.ts  get-context-tool.test.ts  git-writer-commit-timeout-truthful.test.ts  git-writer-hardening.test.ts  git-writer-stat-errors.test.ts  git-writer-timeouts.test.ts  git-writer.test.ts  global-setup.cjs  index-contract.test.ts  index-version.test.ts  list-concepts-sql.test.ts  memory.test.ts  (+18 more)
rag/: README.md  requirements.txt  schist-rag.service  server.py
schema/: SCHEMA.md  concept-slug-parity.json  connection-append-parity.json  connection-line-parity.json  default.yaml  frontmatter-contract.json  frontmatter-parser-parity.json  index-contract.json  title-slug-parity.json  vault-yaml.md  vocab-token-parity.json
scripts/: audit_mcp_response_sizes.ts
viewer/: build.py
(+37 files in other folders)
