[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "schist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["python-frontmatter>=1.1.0", "pyyaml>=6.0.3"]

[project.scripts]
schist = "schist.__main__:main"

[tool.pytest.ini_options]
markers = [
    "integration: slow tests that spawn real git subprocesses",
]
