[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "schist"
version = "0.1.0"
description = "Agent-first knowledge graph: git is truth, SQLite is query, humans just watch"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "schist contributors" }
]
keywords = ["knowledge-graph", "agents", "mcp", "markdown", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["python-frontmatter>=1.1.0", "pyyaml>=6.0.3"]

[project.urls]
Homepage = "https://github.com/yibeichan/schist"
Repository = "https://github.com/yibeichan/schist"
Issues = "https://github.com/yibeichan/schist/issues"
Changelog = "https://github.com/yibeichan/schist/blob/main/CHANGELOG.md"

[project.scripts]
schist = "schist.__main__:main"
schist-ingest = "schist.ingest:main"

# Explicit package list — without this, setuptools 82+ flat-layout
# auto-discovery fails when a local `cli/hooks/` directory exists (as
# created by test_rate_limit.py's `rejected-pushes.log`, which lands
# under cli/hooks/ by default even though the log file is gitignored).
# setuptools then errors with "Multiple top-level packages discovered in
# a flat-layout: ['hooks', 'schist']" because .gitignore is invisible
# to it. Pinning packages to ["schist"] makes the install deterministic
# regardless of stray local directories.
[tool.setuptools]
packages = ["schist"]

# Ship .sql files (schema.sql, seed-domains.sql) inside the wheel so
# `schist-ingest` works after `pip install schist` — ingest.py reads
# schema.sql via Path(__file__).parent / 'schema.sql'.
[tool.setuptools.package-data]
schist = ["*.sql"]

[tool.pytest.ini_options]
markers = [
    "integration: slow tests that spawn real git subprocesses",
]
